# olx_rent

./: LICENSE  README.md  pyproject.toml
olx_rent/: main.py
src/: config.py  get_street_data.py  olx_rent.py  utils.py
tests/: test_olx_rent.py
