[tool.poetry]
name = "olx_rent"
version = "0.1.0"
description = "Monitor new room/appartment offers on OLX"
authors = ["trymzet <michalmzawadzki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
